added few more morphline dep

--- a/pom.xml
+++ b/pom.xml
@@ -71,16 +71,71 @@ limitations under the License.
   </modules>
 
   <dependencies>
-    <dependency>
-      <groupId>org.kitesdk</groupId>
-      <artifactId>kite-morphlines-core</artifactId>
-      <version>${kite.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.kitesdk</groupId>
-      <artifactId>kite-morphlines-json</artifactId>
-      <version>${kite.version}</version>
-    </dependency>
+      <dependency>
+          <groupId>org.kitesdk</groupId>
+          <artifactId>kite-morphlines-core</artifactId>
+          <version>${kite.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.kitesdk</groupId>
+          <artifactId>kite-morphlines-json</artifactId>
+          <version>${kite.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.kitesdk</groupId>
+          <artifactId>kite-morphlines-avro</artifactId>
+          <version>${kite.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.kitesdk</groupId>
+          <artifactId>kite-morphlines-hadoop-core</artifactId>
+          <version>${kite.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.kitesdk</groupId>
+          <artifactId>kite-morphlines-hadoop-parquet-avro</artifactId>
+          <version>${kite.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.kitesdk</groupId>
+          <artifactId>kite-morphlines-hadoop-rcfile</artifactId>
+          <version>${kite.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.kitesdk</groupId>
+          <artifactId>kite-morphlines-hadoop-sequencefile</artifactId>
+          <version>${kite.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.kitesdk</groupId>
+          <artifactId>kite-morphlines-maxmind</artifactId>
+          <version>${kite.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.kitesdk</groupId>
+          <artifactId>kite-morphlines-saxon</artifactId>
+          <version>${kite.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.kitesdk</groupId>
+          <artifactId>kite-morphlines-tika-core</artifactId>
+          <version>${kite.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.kitesdk</groupId>
+          <artifactId>kite-morphlines-tika-decompress</artifactId>
+          <version>${kite.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.kitesdk</groupId>
+          <artifactId>kite-morphlines-twitter</artifactId>
+          <version>${kite.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.kitesdk</groupId>
+          <artifactId>kite-morphlines-useragent</artifactId>
+          <version>${kite.version}</version>
+      </dependency>
   </dependencies>
 
   <profiles>
